# OpenElara

./: README.md
er/: CMakeLists.txt  er.cpp  export_ess_example.cpp
erconsole/: erconsole.pro  main.cpp
ergui/: 1_High.preset  2_Normal.preset  3_Fast.preset  3_Low.preset  CMakeLists.txt  README.md  cn.qm  cn.ts  ergui.aps  ergui.ini  ergui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui  qcustomlabel.cpp  qcustomlabel.h  resource.qrc
home_api/reference_code/: elara_encode_array.cpp
home_api/source/: CMakeLists.txt
home_api/source/include/: ElaraHomeAPI.h  esslib.h  esswriter.h
home_api/source/src/: ElaraHomeAPI.cpp  esslib.cpp  esswriter.cpp
liber_shader/: CMakeLists.txt  ei_camera_nodes.cpp  ei_light_filters.cpp  ei_oiio_load_image.txt  ei_procedural.cpp  ei_shader_lib.cpp  ei_shader_lib.h  ei_texture_shader.cpp  lightmap_baker.cpp  photometric.h
