
# ER shader library
INCLUDE_DIRECTORIES (${ZLIB_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/../liber/include)

FILE (GLOB h_src *.h)
FILE (GLOB cpp_src *.cpp)

ADD_LIBRARY (liber_shader SHARED ${h_src} ${cpp_src})
TARGET_LINK_LIBRARIES (liber_shader liber ${ZLIB_LIBRARY} ${OPENEXR_LIBRARIES})

if (MSVC)
	INSTALL (TARGETS liber_shader RUNTIME DESTINATION bin)
	INSTALL (TARGETS liber_shader LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else ()
	INSTALL (TARGETS liber_shader RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
endif ()
