cmake_minimum_required(VERSION 2.8)

project(ElaraHomeAPI)

set(ElaraHome_INSTALL_BINARY_DIR "${CMAKE_INSTALL_PREFIX}/bin")
set(ElaraHome_INSTALL_LIBRARY_DIR "${CMAKE_INSTALL_PREFIX}/lib")
set(ElaraHome_INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ElaraHome_INSTALL_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ElaraHome_INSTALL_LIBRARY_DIR})

file(GLOB SDK_HEADERS "include/*.h")
file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")

add_library(ElaraHomeAPI SHARED ${SDK_HEADERS} ${HEADERS} ${SOURCES})

install(TARGETS ElaraHomeAPI RUNTIME DESTINATION bin)
install(TARGETS ElaraHomeAPI LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(FILES ${SDK_HEADERS} DESTINATION include)
